# bellmux

./: CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md
src/: db.rs  format.rs  main.rs  snippets.rs  validate.rs
