[package]
name = "bellmux"
version = "0.1.0"
edition = "2021"
description = "Minimal notification layer bridging Claude Code hooks, tmux, and SQLite."
license = "MIT OR Apache-2.0"

[[bin]]
name = "bellmux"
path = "src/main.rs"

[dependencies]
rusqlite   = { version = "0.31", features = ["bundled"] }
clap       = { version = "4", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow     = "1"
dirs       = "5"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
